--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,3 +1,9 @@
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 .posts-container {
     display: flex;
     flex-direction: column;
