--- a/client/src/css/ReadMoreBlog.css
+++ b/client/src/css/ReadMoreBlog.css
@@ -14,8 +14,16 @@
     border-radius: 10px;
 }
 
+.blog-test {
+    width: 150px;
+
+    inline-size: 300px;
+    overflow-wrap: break-word;
+}
+
 .blog-post-text {
     text-align: center;
+
 }
 
 #title {
