--- a/client/src/css/Post.css
+++ b/client/src/css/Post.css
@@ -31,6 +31,16 @@
     height: auto;
     width: auto;
     margin: 10px;
+    padding: 5px;;
     background-color: rgb(0, 0, 0);
-    color: rgb(192, 154, 49);
+    color:wheat;
+    border-color: wheat;
+    text-decoration: none;
+    border-radius: 5px;
+   
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
 }
